# engine

./: CMakeLists.txt  README.md
Components/: CMakeLists.txt  camera.cpp  camera.hpp  light.cpp  light.hpp
Core/: CMakeLists.txt  stl.hpp  time.hpp
Core/Assets/: CMakeLists.txt  combine_geometry.cpp  combine_geometry.hpp  importer.cpp  importer.hpp  material.cpp  material.hpp  mesh.hpp  mesh_geometry.hpp  mesh_part.hpp  mesh_primitive.hpp  mesh_utils.hpp  mesh_vertex.hpp  sprite_geometry.hpp  stl.hpp  vertex.hpp
Core/Assets/Geometries/: combine_geometry.cpp  combine_geometry.hpp  sprite_geometry.cpp  sprite_geometry.hpp
Core/Common/: CMakeLists.txt  file.hpp  stl.hpp
Core/Common/Base/: object.hpp
Core/Math/: CMakeLists.txt  rgb.cpp  size.hpp  vec3.hpp  vec4.cpp  vec4.hpp
Core/Platform/: CMakeLists.txt  object.hpp  stl.hpp
Core/Platform/Base/: input.hpp  input_buttons.hpp  input_keys.hpp  platform.cpp  platform.hpp  platform_factory.hpp  window.cpp  window.hpp
Core/Platform/GLFW/: input.cpp  input.hpp  platform.cpp  platform.hpp  platform_factory.cpp  platform_factory.hpp  window.cpp  window.hpp  window_callbacks.cpp  window_callbacks.hpp
Core/Platform/Windows/: platform.cpp  platform.hpp  platform_factory.cpp  platform_factory.hpp  window.cpp  window.hpp
Core/Utils/: CMakeLists.txt  file.cpp  file.hpp  grid.hpp  time.cpp  time.hpp
Core/Utils/Base/: object.hpp
Graphics/: CMakeLists.txt  buffer.cpp  buffer.hpp  buffer_data.hpp  object.hpp  program.cpp  program.hpp  render_pass.hpp  shader.hpp  stl.hpp  texture_data.hpp  vertex_array.cpp  vertex_array.hpp
Math/: CMakeLists.txt
Platform/: CMakeLists.txt  platform.cpp  platform.hpp  stl.hpp  window.cpp  window.hpp
Rendering/: CMakeLists.txt  material.hpp
Rendering/Graphics/: CMakeLists.txt  buffer.cpp  buffer.hpp  buffer_data.cpp  buffer_data.hpp  object.cpp  object.hpp  program.hpp  render_pass.cpp  render_pass.hpp  sampler.cpp  sampler.hpp  shader.cpp  shader.hpp  shader_stage.cpp  shader_stage.hpp  stl.hpp  texture.cpp  texture.hpp  texture_data.cpp  texture_data.hpp  vertex_array.cpp  vertex_array.hpp  vertex_attribute.hpp
Scene/: CMakeLists.txt
Scene/Components/: CMakeLists.txt  camera.cpp  camera.hpp  light.cpp  light.hpp  transform.cpp  transform.hpp
Scene/Physics/: CMakeLists.txt  physics.cpp  physics.hpp  physics_debug.cpp  physics_debug.hpp  physics_shapes.cpp  physics_shapes.hpp  physics_utils.cpp  physics_utils.hpp  physics_world.cpp  physics_world.hpp  ray.hpp  ray_result.cpp  ray_result.hpp  stl.hpp
Scene/Resources/: CMakeLists.txt  importer.cpp  importer.hpp  mesh_importer.cpp  mesh_importer.hpp  resource_container.hpp  resource_manager.cpp  resource_manager.hpp  stl.hpp  texture_importer.cpp  texture_importer.hpp
Scene/Resources/Containers/: container.hpp  shader_container.cpp  shader_container.hpp
Scene/Resources/Importers/: mesh_importer.cpp  mesh_importer.hpp  texture_importer.hpp
